Right now we have code like: if (!refreshed_user || user_get_cached (user) && !user_get_cached (refreshed_user)) which gcc warns about because of missing parentheses. Rather than just add brackets, this commit moves the last bit into a separate boolean for clarity.
Created attachment 139471 [details] [review] daemon: fix compiler warnings
Attachment 139471 [details] pushed as 27f4dbe - daemon: fix compiler warnings
Created attachment 139472 [details] [review] Revert "daemon: fix compiler warnings" This reverts commit 27f4dbe3181390c7572f9438d63b654255b7a2df.
Created attachment 139473 [details] [review] daemon: fix compiler warnings Right now we have code like: if (!refreshed_user || user_get_cached (user) && !user_get_cached (refreshed_user)) which gcc warns about because of missing parentheses. This commit fixes it by adding brackets.
Attachment 139472 [details] pushed as b77548d - Revert "daemon: fix compiler warnings" Attachment 139473 [details] pushed as f513320 - daemon: fix compiler warnings
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.