daemon: fix compiler warnings

Right now we have code like:

 if (!refreshed_user || user_get_cached (user) && !user_get_cached (refreshed_user))

which gcc warns about because of missing parentheses.  Rather than
just add brackets, this commit moves the last bit into a separate boolean
for clarity.

https://bugs.freedesktop.org/show_bug.cgi?id=106463